Transformer NLP model refined

--- a/web-flask/ai_models/perfume_ner_en_rich.ipynb
+++ b/web-flask/ai_models/perfume_ner_en_rich.ipynb
@@ -255,8 +255,8 @@
             "\u001b[38;5;4mℹ Initial learn rate: 0.001\u001b[0m\n",
             "E    #       LOSS TOK2VEC  LOSS NER  ENTS_F  ENTS_P  ENTS_R  SCORE \n",
             "---  ------  ------------  --------  ------  ------  ------  ------\n",
-            "  0       0          0.00     49.50    0.00    0.00    0.00    0.00\n",
-            "  0     200        347.60   3337.68   91.46   91.35   91.57    0.91\n",
+            "  0       0          0.00     42.41    0.00    0.00    0.00    0.00\n",
+            "  0     200        483.87   4202.54   91.29   92.50   90.11    0.91\n",
             "\u001b[38;5;2m✔ Saved pipeline to output directory\u001b[0m\n",
             "output\\model-last\n"
           ]
@@ -268,7 +268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -276,12 +276,11 @@
           "output_type": "stream",
           "text": [
             "20 → 20 (AGE)\n",
-            "boy → men (GENDER)\n",
-            "fruity → fruity (PREFERRED_ACCORD)\n",
-            "for date nights → Date Night (USAGE_SITUATION)\n",
+            "male → men (GENDER)\n",
+            "aqua → aqua (PREFERRED_ACCORD)\n",
             "lasts long → Long (LONGEVITY)\n",
-            "leaves light trail → leaves light trail (SILLAGE)\n",
-            "costly → High-end (PRICE)\n"
+            "light sillage → Light (SILLAGE)\n",
+            "cheap → Affordable (PRICE)\n"
           ]
         }
       ],
@@ -289,7 +288,7 @@
         "from ner_normalize import normalize_entity\n",
         "\n",
         "nlp_ner = spacy.load(\"./output/model-last\")\n",
-        "test_text = \"I'm a 20 years old boy. I want a fruity accord and i will wear them for date nights. I want something that lasts long and leaves light trail. The price can be costly\"\n",
+        "test_text = \"I'm 20 years old Im male I want something that has aqua scent Something that lasts long and has light sillage Something that is cheap also\"\n",
         "\n",
         "doc = nlp_ner(test_text)\n",
         "\n",
