--- a/web-flask/ai_models/perfume_ner_en_rich.ipynb
+++ b/web-flask/ai_models/perfume_ner_en_rich.ipynb
@@ -77,7 +77,7 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "[notice] A new release of pip is available: 24.0 -> 25.1.1\n",
+            "[notice] A new release of pip is available: 24.0 -> 25.2\n",
             "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
           ]
         },
@@ -149,7 +149,7 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "[notice] A new release of pip is available: 24.0 -> 25.1.1\n",
+            "[notice] A new release of pip is available: 24.0 -> 25.2\n",
             "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
           ]
         }
@@ -255,8 +255,8 @@
             "\u001b[38;5;4mℹ Initial learn rate: 0.001\u001b[0m\n",
             "E    #       LOSS TOK2VEC  LOSS NER  ENTS_F  ENTS_P  ENTS_R  SCORE \n",
             "---  ------  ------------  --------  ------  ------  ------  ------\n",
-            "  0       0          0.00     42.41    0.00    0.00    0.00    0.00\n",
-            "  0     200        483.87   4202.54   91.29   92.50   90.11    0.91\n",
+            "  0       0          0.00     38.12    0.00    0.00    0.00    0.00\n",
+            "  0     200        462.16   4088.65   87.46   89.04   85.93    0.87\n",
             "\u001b[38;5;2m✔ Saved pipeline to output directory\u001b[0m\n",
             "output\\model-last\n"
           ]
@@ -268,7 +268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -277,7 +277,7 @@
           "text": [
             "20 → 20 (AGE)\n",
             "male → men (GENDER)\n",
-            "aqua → aqua (PREFERRED_ACCORD)\n",
+            "aquatic → aquatic (PREFERRED_ACCORD)\n",
             "lasts long → Long (LONGEVITY)\n",
             "light sillage → Light (SILLAGE)\n",
             "cheap → Affordable (PRICE)\n"
@@ -288,7 +288,7 @@
         "from ner_normalize import normalize_entity\n",
         "\n",
         "nlp_ner = spacy.load(\"./output/model-last\")\n",
-        "test_text = \"I'm 20 years old Im male I want something that has aqua scent Something that lasts long and has light sillage Something that is cheap also\"\n",
+        "test_text = \"I'm 20 years old Im male I want something that has aquatic scent Something that lasts long and has light sillage Something that is cheap also\"\n",
         "\n",
         "doc = nlp_ner(test_text)\n",
         "\n",
